# src/routes/CommentRoutes.js
@@ -4,7 +4,7 @@ const commentController = require("../controllers/CommentController.js");
 const authMiddleware = require("../middlewares/AuthMiddleware");
 
 
-router.post("/:id", authMiddleware, commentController.addComment);
+router.post("/:productId", authMiddleware, commentController.addComment);
 router.patch("/:id", authMiddleware, commentController.updateComment);
 router.delete("/:id", authMiddleware, commentController.deleteComment);
 
